--- a/clojure.org
+++ b/clojure.org
@@ -703,3 +703,20 @@ Now, the server will automatically reload any modified files in your source dire
   (stop)
   (start server))
 #+END_SRC
+* Shadow CLJS
+
+add a dirlocals like:
+
+#+begin_src elisp
+((nil . ((cider-default-cljs-repl . shadow)
+         (cider-shadow-default-options . "browser-repl"))))
+#+end_src
+
+when inside the repl run the elisp command:
+
+: (cider-set-repl-type "cljs")
+
+This is bound to: 
+
+: , c
+
