--- a/clojure.org
+++ b/clojure.org
@@ -447,10 +447,7 @@ mkdir -p ds_queue/{src,test}/ds_queue ds_queue/resources/public
 cd ds_queue
 #+END_SRC
 
-
-
 mkdir -p supps/{src,test}/supps supps/resources/public
-
 
 : cat > .dir-locals.el 
 
@@ -712,4 +709,9 @@ add a ~.dir-locals.el~ like:
          (cider-shadow-default-options . "browser-repl"))))
 #+end_src
 
+Example ~/.shadow-cljs/config.edn
 
+#+begin_src clojure
+{:dependencies
+ [[cider/cider-nrepl "0.25.0snapshot"]]}
+#+end_src
