--- a/css.org
+++ b/css.org
@@ -1,3 +1,55 @@
+* Setup
+
+deps.edn:
+
+: garden {:mvn/version "1.3.9"}
+
+src/xxx/views/css.cljs:
+
+#+begin_src clojure
+(ns xxx.views.css
+  (:require [garden.core :refer [css]]))
+
+(def website-css
+  [[:body {:font-size "25px"
+           :color "blue"}]])
+
+(defn generate-and-inject-style-tag
+  "Injects a style tag with the id 'injected-css' into the page's head tag
+   Returns generated style tag"
+  []
+  (let [page-head (.-head js/document)
+        style-tag (.createElement js/document "style")]    
+    (.setAttribute style-tag "id" "injected-css")
+    (.appendChild page-head style-tag)))
+
+(defn update-page-css
+  "Updates #injected-css with provided argument (should be some CSS string 
+   -- e.g. output from garden's css fn) If page does not have #injected-css then
+   will create it via call to generate-and-inject-style-tag"
+  [input-css]
+  (let [style-tag-selector "#injected-css"
+        style-tag-query (.querySelector js/document style-tag-selector)
+        style-tag (if (nil? style-tag-query)
+                    (generate-and-inject-style-tag)
+                    style-tag-query)]
+    (aset style-tag "innerHTML" input-css)))
+
+; Usage 
+; (Assumes you've required garden in your namespace)
+; (Optionally throw this in your boot-reload / figwheel reload CB)
+(update-page-css (css website-css))
+#+end_src
+
+
+* basics
+#+begin_src clojure
+(def website-css
+  [[:body {:font-size "25px"
+           :color "blue"}]])
+(css [:body {:font-size "16px"}])
+#+end_src
+
 * Grid Layout
 
 ** grid columns
