--- a/heroku.org
+++ b/heroku.org
@@ -48,3 +48,48 @@ $ git add composer.json
 $ git commit -m "add composer.json for PHP app detection"
 $ heroku buildpacks:set heroku/php
 #+END_SRC
+
+
+* Try Again Sept 2020.
+
+** overview
+
+We are going to do a standard clojure side project that will serve up
+the clojurescript.  So we aren't going to try to deploy a front end
+without a backend.
+
+** steps
+
+*** procfile
+
+have a ~<project>/Procfile~ file with:
+
+#+begin_src 
+╭─fenton@ss9 ~/projects/supps ‹heroku-work*› 
+╰─$ cat Procfile 
+web: clj -m supps.core -p$PORT
+#+end_src
+
+*** build file
+
+The build file is what is run after a deployment.
+
+#+begin_src 
+╭─fenton@ss9 ~/projects/supps ‹heroku-work*› 
+╰─$ cat bin/build                                       1 ↵
+#!/usr/bin/env bash
+
+echo "Starting to build cljs application"
+echo "----------------------------------"
+clojure -m cljs.main -O advanced -o resources/public/cljs-out/fe_dev-main.js -c supps.core
+
+FILE=resources/public/cljs-out/fe_dev-main.js
+
+if [ -f "$FILE" ]; then
+    echo "Finished building file: $FILE"
+    exit 0
+else
+    echo "Build of $FILE failed!"
+    exit 1
+fi
+#+end_src
