--- a/clojure.org
+++ b/clojure.org
@@ -586,30 +586,62 @@ target/
 
 ;; (transform [ALL] inc [[1 2 3] [4 5 6]])
 #+END_SRC
-* postmodern - logging
 
-#+BEGIN_SRC clojure
-  ;; deps.edn
-  postmortem {:mvn/version "0.2.0"}
+* logging
+** 
+** postmodern - logging
 
-  ;; require
-  (:require [postmortem.core :as pm]
-            [postmortem.xforms :as xf])
-#+END_SRC
+ #+BEGIN_SRC clojure
+   ;; deps.edn
+   postmortem {:mvn/version "0.4.0"}
 
-#+BEGIN_SRC clojure
-  (defn abc [x y]
-    (pm/dump :abc-log (xf/take-last 2))
-    (+ x y))
+   ;; require
+   (:require [postmortem.core :as pm]
+             [postmortem.xforms :as xf])
+ #+END_SRC
 
-  (abc 1 2)
+ #+BEGIN_SRC clojure
+   (defn abc [x y]
+     (pm/dump :abc-log (xf/take-last 2))
+     (+ x y))
 
-  (pm/log-for :abc-log)
-#+END_SRC
+   (abc 1 2)
+
+   (pm/log-for :abc-log)
+ #+END_SRC
 * reframe
 
+** only need to update the app-db
 
->>>>>>> 33303d68a1a5e28f3768cf3fd36b3f047f557db0
+When all you need is already contained in the app-db, you can just do:
+
+#+begin_src clojure
+  (reg-event-db :keypress-j-mainpage
+                (fn [db _] (assoc db :curr-key :j))
+#+end_src
+
+However sometimes you need more data than what is already in the app
+db.  To achieve this, we fetch this information elsewhere like so:
+
+#+begin_src clojure
+(reg-cofx                                   ;; registration function
+   :now                                     ;; what cofx-id are we registering
+   (fn [coeffects _]                         ;; second parameter not used in this case
+      (assoc coeffects :now (js.Date.))))   ;; add :now key, with value
+#+end_src
+
+and now instead of ~reg-event-db~, we use; ~reg-event-fx~ like so:
+
+#+begin_src clojure
+  (reg-event-fx                     ;; note: -fx
+     :load-defaults
+     [(inject-cofx :now)]
+     (fn [cofx event]                 ;; cofx means coeffects
+       (let [now (:now cofx)  ;; <-- get data from cofx
+             db  (:db cofx)]          ;; <-- more data from cofx
+         {:db (assoc db :time-now now)}))) ;; returns an effect
+#+end_src
+
 * protocols, deftype
 
 first we define a protocol, basically this is a list of methods
